Fix overlapping issues for code examples on the greetings page.

--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -148,14 +148,13 @@
         text-align: left
         margin: 20px
         width: 320px
-        height: 200px
         background: #EDEDED
         box-shadow: 0 0 7px #888
         padding: 5px
 
-
         .CodeMirror-scroll
-          height: auto
+          height: 220px
+          overflow: hidden
 
   .introduction
     text-align: center
